# rust_practices_tutorial

./: .gitpod.Dockerfile  .gitpod.yml  3D-tutorial.md  Cargo.toml  Doc_ref.md  GUI-notes.md  README.md  note.md  rust.ipynb
30days_of_code/: day0.rs
big-num_ex/: Cargo.toml  readme.md
big-num_ex/src/: main.rs
big_number/: Cargo.toml  big_number.rs  readme.txt
cargo_examples/: cargo_hello.md  cargo_lib_crate.md  note.md  print_format.rs
cargo_examples/hello1/: Cargo.toml
examples/: array.rs  borrow.rs  c-like_struct.rs  enum.rs  for.rs  fun_ex1.rs  function.rs  function_w_unit_test.rs  generic.rs  if_else.rs  impl.rs  lifetime.rs  loop.rs  match.rs  module.rs  module_nest.rs  module_private1.rs  module_private2.rs  module_private3.rs  readme.md  ref_code.txt  slice.rs  string.rs  trait_impl.rs  tuple.rs  tuple_struct.rs  unit_struct.rs  vector.rs  vector_iterator.rs  while.rs
examples/crate_ex/: readme.md
examples/crate_ex/test_crate_hello_world/: Cargo.toml
examples/crate_ex/test_crate_hello_world/src/: lib.rs
examples/module_ex1/: main.rs
examples/module_ex2/: main.rs
examples/module_ex3/: main.rs
examples/module_ex5/: main.rs
front-end_tutorial/ex1/: Cargo.toml  index.html  readme.md
front-end_tutorial/ex1/src/: home.rs  main.rs
front-end_tutorial/html_simplest/: Cargo.toml
front-end_tutorial/html_simplest2/: Cargo.toml  readme.md
gui-druid/: Cargo.toml
gui-sciter/: Cargo.toml
rust_by_example/: readme.md
test_hello/: Cargo.toml  rust_blockchain.md
tutoiral/: note.md
vul_tutorial1/: Cargo.toml
vul_tutorial1/src/: main.rs
(+240 files in other folders)
