[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ui"
path = "src/main.rs"

[dependencies]
log = "0.4.6"
wasm-logger = "0.2.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17"
reqwest = { version = "0.11", features = ["json"] } # for backend API call
wasm-bindgen-futures = "0.4.34" # for backend API call
serde = { version = "1.0.159", features = ["derive"] } # for backend API call model deserialization
chrono = { version = "0.4.23", features = ["serde"] } # for backend API call model deserialization and operations with dates