[package]
name = "test_crate_hello_world"
version = "0.1.0"
edition = "2021"
authors = ["CodingCoffee"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "A Simple Hello World Crate"
repository = ""
keywords = ["hello", "world"]
license = "Apache-2.0"

[dependencies]
